--- a/templates/user/register.html
+++ b/templates/user/register.html
@@ -45,7 +45,7 @@
                     if (data['status'] == 'SUCCESS'){
                         layer.msg(data['msg']);
                     } else if (data['status'] == 'ERROR'){
-                        layer.msg(data['msg'][0]);
+                        layer.msg(data['msg']);
                     }
                 }
             });
