--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,7 @@
     {% endblock %}
     <script src="{% static 'common/js/jquery-3.3.1.min.js' %}"></script>
     <script src="{% static 'common/js/layer.js' %}"></script>
+    <script src="{% static 'common/js/bootstrap.min.js' %}"></script>
     <script src="https://cdn.bootcss.com/highlight.js/9.12.0/highlight.min.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
 </head>
