--- a/templates/post/detail.html
+++ b/templates/post/detail.html
@@ -7,12 +7,13 @@
     <link rel="stylesheet" href="{% static 'post/css/post_style.css' %}">
 {% endblock %}
 {% block content %}
+    {% csrf_token %}
     <div class="row">
         <div class="col-md-8 col-sm-8 col-xs-12">
             <div class="post-info">
                 <h1 class="post-title">{{ post.title }}</h1>
                 <label><i class="fa fa-clock-o"></i><span>{{ post.pub_time }}</span></label>
-                <label><i class="fa fa-comment"></i><span>{{ post.target.count }}</span></label>
+                <label id="comment-count1"><i class="fa fa-comment"></i><span>{{ post.target.count }}</span></label>
                 <label><i class="fa fa-eye"></i><span>{{ post.views }}</span></label>
                 <label><i class="fa fa-bookmark"></i><span>{{ post.category }}</span></label>
                 {% for tag in post.tags.all %}
@@ -28,7 +29,7 @@
                 <a id="like" href="javascript:increase_likes({{ post.id }});" class="thumbs_button fa fa-heart-o" title="点赞，支持一下">
                     点赞(<span id="like_num">{{post.likes}}</span>)
                 </a>
-                <a class="reward_button fa fa-coffee" title="打赏，支持一下"> 打赏</a>
+                <a id="reward" class="reward_button fa fa-coffee"> 打赏</a>
                 <span class="clear"></span>
             </div>
             <div class="post-nav">
@@ -61,9 +62,10 @@
                         <input type="submit" value="发布" class="btn btn-primary pull-right" style="margin-top:5px;">
                     </form>
                 {% else %}
+
                     <a href="{% url 'user:login' %}" class="h3">登录<span class="h4">后评论</span></a>
                 {% endif %}
-                <h3 class="comment-count">共<span>{{ post.target.count }}</span>条评论</h3>
+                <h3 id="comment-count2">共<span>{{ post.target.count }}</span>条评论</h3>
                 <div class="comment-list">
                     {% for comment in comment_list %}
                         <div id="root_{{ comment.pk }}" class="comment-content">
@@ -137,6 +139,8 @@
                         }
                         $("input[name=parent]").val('0');
                         $('input[name=content]').val('');
+                        $('#comment-count1').find('span').text(parseInt($('#comment-count1').find('span').text()) + 1);
+                        $('#comment-count2').find('span').text(parseInt($('#comment-count2').find('span').text()) + 1);
                     } else if (data['status'] == 'ERROR'){
                         layer.msg(data['msg'][0]);
                     }
@@ -150,5 +154,31 @@
                 $("input[name=content]").focus();
             });
         };
+        $('#reward').popover ({
+            target: 'click',
+            html: true,
+            title: '请博主喝咖啡',
+            content: '<img src="{% static 'user/img/reward.png' %}" width="200px" height="200px" />',
+            placement: 'top',
+            {#delay: { show: 50, hide: 100 }#}
+        });
+        function increase_likes(post_id){
+            $.ajax({
+                url: "{% url 'post:likes' %}",
+                type: 'POST',
+                data: {
+                    'pk': post_id,
+                    'csrfmiddlewaretoken': $("input[name=csrfmiddlewaretoken]").val()
+                },
+                success: function (data){
+                    if(data.status == "SUCCESS"){
+                        var like_num = parseInt($('#like_num').text());
+                        $('#like_num').text(like_num+1);
+                    }
+                    $('#like').removeClass('fa-heart-o').addClass('fa fa-heart');
+                    layer.msg(data.msg);
+                }
+            })
+        }
     </script>
 {% endblock %}
