add social login

--- a/templates/user/login.html
+++ b/templates/user/login.html
@@ -24,6 +24,7 @@
                     </div>
                 </div>
             </form>
+            <a title="GitHub登录" class="socialaccount_provider github" href="/accounts/github/login/?process=login"><li class="fa fa-github fa-2x"></li></a>
         </div>
     </div>
 {% endblock %}
