--- a/templates/post/detail.html
+++ b/templates/post/detail.html
@@ -15,7 +15,9 @@
                 <label><i class="fa fa-clock-o"></i><span>{{ post.pub_time }}</span></label>
                 <label id="comment-count1"><i class="fa fa-comment"></i><span>{{ post.target.count }}</span></label>
                 <label><i class="fa fa-eye"></i><span>{{ post.views }}</span></label>
-                <label><i class="fa fa-bookmark"></i><span>{{ post.category }}</span></label>
+                {% if post.category %}
+                    <label><i class="fa fa-bookmark"></i><span>{{ post.category }}</span></label>
+                {% endif %}
                 {% for tag in post.tags.all %}
                     <label class="label label-default">
                         {{ tag.name }}
